# MultiSpanQA

./: README.md  eval.sh  requirements.txt  run.sh  setup.cfg  train.sh
src/: eval_script.py  multispan_qa.py  run_squad.py  run_tagger.py  run_tagger_plus.py  trainer.py
