[metadata]
name = MultiSpanQA 
version = 0.0.0
url = https://github.com/sjrl/MultiSpanQA 
description = MultiQA implementation 
author = deepset.ai

[options]
python_requires = >=3.7, <4
packages = find:
setup_requires =
    setuptools
install_requires =
    importlib-metadata; python_version < '3.8'
    numpy
    transformers>=4.21.2
    datasets>=1.8.0
    tqdm
    huggingface-hub>=0.5.0

